--- a/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -8,13 +8,14 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sman gtong ba'i tshe sman la sngags kyis gdab pa/</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-087-011"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +41,7 @@
             </sourceDesc>
             <notesStmt>
                 <note>Note: not identified in Toh.</note>
-                <note type="lastUpdated" date-time="2023-03-23T14:42:34.801Z" user="admin">23/03/2023 14:42:34</note>
+                <note type="lastUpdated" date-time="2023-04-12T13:07:50.503Z" user="admin">12/04/2023 13:07:50</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto (update-sponsorship)</note>
@@ -52,6 +53,9 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-23T10:07:15.029Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:42:30.598Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-23T14:42:30.598Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-03-23T14:43:03.889Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-12T13:07:46.226Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-12T13:07:46.226Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
