--- a/translations/kangyur/placeholders/090-006_toh562-the_sutra_of_great_cool_grove.xml
+++ b/translations/kangyur/placeholders/090-006_toh562-the_sutra_of_great_cool_grove.xml
@@ -22,10 +22,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-090-006"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-14T12:26:09.148Z" user="admin">14/09/2022 12:26:09</note>
+                <note type="lastUpdated" date-time="2023-04-12T14:14:22.847Z" user="admin">12/04/2023 14:14:22</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:23:55.171Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="v 0.0.2" date-time="2020-04-14T12:46:46.515Z" user="line-tofte">v 0.0.2</note>
@@ -49,6 +49,8 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-07-08T10:36:45.436Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-25T12:32:19.92Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T12:26:07.064Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-04-12T14:14:18.571Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-04-12T14:14:18.571Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
