--- a/translations/kangyur/translations/089-009_toh552-the_eight_maidens_praise_of_manjusri.xml
+++ b/translations/kangyur/translations/089-009_toh552-the_eight_maidens_praise_of_manjusri.xml
@@ -20,14 +20,14 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
-                                <publisher>
+                        <publicationStmt status="1">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all
                                         the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
-                                <availability>
+                <availability>
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution -
@@ -36,11 +36,11 @@
                                                         full details, see the Creative Commons license.</p>
                                         </licence>
                                 </availability>
-                                <idno xml:id="UT22084-089-009"/>
-                                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly
+                <idno xml:id="UT22084-089-009"/>
+                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly
                                         from the standard logic.</note>
-                                <date>2023-03-22</date>
-                        </publicationStmt>
+                <date>2023-03-22</date>
+            </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh552" type="text">
                                         <ref>Toh 552</ref>
@@ -53,7 +53,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-14T12:19:51.78Z" user="admin">14/04/2023 12:19:51</note>
+                                <note type="lastUpdated" date-time="2023-04-17T08:26:09.135Z" user="admin">17/04/2023 08:26:09</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:43:03.671Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:43:24.87Z" user="line-tofte">Auto
@@ -99,6 +99,8 @@
                                 <note type="updated" update="translation-status" value="1.a" date-time="2023-03-22T14:34:21.324Z" user="martina-cotter">1.a</note>
                                 <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:34:21.324Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:19:48.779Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:26:04.826Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:26:04.826Z" user="sameer">Included in App v 3.1</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -340,15 +342,6 @@
                                                         <term xml:lang="Bo-Ltn" status="verified">’jam pa’i dbyangs </term>
                                                         <term xml:lang="bo">འཇམ་པའི་དབྱངས།</term>
                                                         <term xml:lang="Sa-Ltn" status="verified">Mañjughoṣa</term>
-                                                        <term type="definition">An epithet of Mañjuśrī.</term>
-                                                </gloss>
-                    </item>
-                                        <item>
-                        <gloss type="person" xml:id="UT22084-089-009-48">
-                                                        <term>Lord of Speech</term>
-                                                        <term xml:lang="Bo-Ltn" status="verified">ngag gi dbang phyug </term>
-                                                        <term xml:lang="bo">ངག་གི་དབང་ཕྱུག</term>
-                                                        <term xml:lang="Sa-Ltn" status="verified">vāgīśvara</term>
                                                         <term type="definition">An epithet of Mañjuśrī.</term>
                                                 </gloss>
                     </item>
