--- a/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
@@ -14,13 +14,14 @@
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
                 <editor role="reviser" ref="eft:person-319">Ryan Conlon</editor>
                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.4 <date>2019</date>
+                <edition>v 0.1.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-091-064"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-29T14:32:47.374Z" user="admin">29/03/2023 14:32:47</note>
+                <note type="lastUpdated" date-time="2023-04-17T09:37:35.362Z" user="admin">17/04/2023 09:37:35</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:02.613Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:02.613Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">2.h</note>
@@ -45,6 +46,9 @@
                 <note type="updated" update="text-version" value="0.1.3" date-time="2022-08-08T14:14:07.378Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:32:42.971Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:32:42.971Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:33:15.674Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:37:31.039Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:37:31.039Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
