--- a/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -4,25 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mgon po nag po'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahākāladhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Mahākāla</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal mgon po nag po zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahākāladhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mgon po nag po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahākālanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal mgon po nag po zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahākālanāmadhāraṇī</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Andreas Doctor</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.4 <date>2019</date>
+                <edition>v 0.1.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-091-065"/>
                 <date/>
             </publicationStmt>
@@ -47,13 +46,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-29T14:33:41.521Z" user="admin">29/03/2023 14:33:41</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:48.589Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:48.589Z" user="john">3</note>
+                <note type="lastUpdated" date-time="2023-04-17T09:38:31.897Z" user="admin">17/04/2023 09:38:31</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:48.589Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:48.589Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T08:46:40.877Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-05-10T08:46:40.877Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-10T08:47:09.998Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T08:47:28.234Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:33:37.163Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:33:37.163Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T08:47:28.234Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:33:37.163Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:33:37.163Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:34:14.553Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:38:27.596Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:38:27.596Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
