--- a/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -4,26 +4,25 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">nag mo chen mo'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahākālīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">Dhāraṇī of Mahākālī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">lha mo nag mo chen mo'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">devīmahākālīnāmadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahākālīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">nag mo chen mo'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of Mahākālī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">lha mo nag mo chen mo'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">devīmahākālīnāmadhāraṇī</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Andreas Doctor</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
+                <title type="otherTitle" xml:lang="Bo-Ltn">lha mo nag mo chen mo'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.4 <date>2019</date>
+                <edition>v 0.1.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-091-067"/>
                 <date/>
             </publicationStmt>
@@ -48,13 +47,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-29T14:35:46.014Z" user="admin">29/03/2023 14:35:46</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:09:33.919Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:09:33.919Z" user="john">3</note>
+                <note type="lastUpdated" date-time="2023-04-17T09:40:26.543Z" user="admin">17/04/2023 09:40:26</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:09:33.919Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:09:33.919Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-10T09:53:36.891Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T09:53:51.865Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T09:53:51.865Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:36:18.372Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:40:22.242Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:40:22.242Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
